# yured

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cross-build.yml
assets/: yured.service
assets/etc/modules-load.d/: iio.conf
assets/etc/systemd/system/: sys-kernel-config.mount  yured.service
src/: error.rs  fusion.rs  main.rs  ws.rs  yure.rs
src/iio/: buffer.rs  channel.rs  discovery.rs  mod.rs  trigger.rs  types.rs
