[package]
name = "yured"
version = "0.1.0"
edition = "2024"

[dependencies]
ahrs = { version = "0.8.0", features = ["field_access"] }
clap = { version = "4.5", features = ["derive"] }
industrial-io = "0.6.1"
karen = "0.1.2"
nalgebra = "0.34.1"
nalgebra_vqf = { package = "nalgebra", version = "0.33.2" }
nix = "0.29"
num-traits = "0.2"
rand = "0.9.2"
ringbuffer = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9.1"
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
vqf = "0.4.1"
